[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://pages/timetable/Create_Element.gd" type="Script" id=4]

[node name="Create_Element" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "KEY_CRT_EDIT_ELT"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 520.0
margin_bottom = 48.0

[node name="Titre" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 520.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="VBoxContainer/Titre"]
margin_right = 520.0
margin_bottom = 29.0
text = "KEY_TITRE"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Titre"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 72.0
placeholder_text = "KEY_ELEMENT"

[node name="Calendrier" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 520.0
margin_bottom = 185.0

[node name="Label" type="Label" parent="VBoxContainer/Calendrier"]
margin_top = 3.0
margin_right = 184.0
margin_bottom = 32.0
text = "KEY_CALENDAR"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Calendrier"]
margin_left = 188.0
margin_right = 217.0
margin_bottom = 35.0

[node name="Date" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 520.0
margin_bottom = 235.0

[node name="Label" type="Label" parent="VBoxContainer/Date"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 32.0
text = "KEY_DAY"

[node name="Jour" type="OptionButton" parent="VBoxContainer/Date"]
margin_left = 112.0
margin_right = 205.0
margin_bottom = 35.0
text = "Lundi"
items = [ "Lundi", null, false, 0, null, "Mardi", null, false, 1, null, "Mercredi", null, false, 2, null, "Jeudi", null, false, 3, null, "Vendredi", null, false, 4, null, "Samedi", null, false, 5, null, "Dimanche", null, false, 6, null ]
selected = 0

[node name="color" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 250.0
margin_right = 520.0
margin_bottom = 285.0

[node name="Label" type="Label" parent="VBoxContainer/color"]
margin_top = 3.0
margin_right = 137.0
margin_bottom = 32.0
text = "KEY_COLOR"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/color"]
margin_left = 141.0
margin_right = 227.0
margin_bottom = 35.0
text = "(0,0,0)"

[node name="Heure_Deb" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 520.0
margin_bottom = 339.0

[node name="Label" type="Label" parent="VBoxContainer/Heure_Deb"]
margin_top = 5.0
margin_right = 203.0
margin_bottom = 34.0
text = "KEY_HEURE_DEB"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Heure_Deb"]
margin_left = 207.0
margin_right = 301.0
margin_bottom = 39.0
text = "8h00"

[node name="Heure_Fin" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 520.0
margin_bottom = 393.0

[node name="Label" type="Label" parent="VBoxContainer/Heure_Fin"]
margin_top = 5.0
margin_right = 198.0
margin_bottom = 34.0
text = "KEY_HEURE_FIN"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Heure_Fin"]
margin_left = 202.0
margin_right = 296.0
margin_bottom = 39.0
text = "10h00"

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color( 0.615686, 0.54902, 0.54902, 1 )
margin_top = 408.0
margin_right = 520.0
margin_bottom = 437.0
text = "KEY_EXPL_FMT_HEURE"
autowrap = true

[node name="Bt_suppr" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 452.0
margin_right = 520.0
margin_bottom = 492.0

[node name="Bt_delete" type="Button" parent="VBoxContainer/Bt_suppr"]
margin_right = 258.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_DELETE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Bt_suppr"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Bt_ok_cancel" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 507.0
margin_right = 520.0
margin_bottom = 547.0

[node name="Bt_cancel" type="Button" parent="VBoxContainer/Bt_ok_cancel"]
margin_right = 258.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_ANNULER"

[node name="Bt_validate" type="Button" parent="VBoxContainer/Bt_ok_cancel"]
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_VALIDER"

[connection signal="item_selected" from="VBoxContainer/Calendrier/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Date/Jour" to="." method="_on_Jour_item_selected"]
[connection signal="color_changed" from="VBoxContainer/color/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/Bt_suppr/Bt_delete" to="." method="_on_Bt_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/Bt_ok_cancel/Bt_cancel" to="." method="_on_Bt_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/Bt_ok_cancel/Bt_validate" to="." method="_on_Bt_validate_pressed"]
